# marko

./: .gitattributes  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: macos-traffic-lights.md
public/: splashscreen.html
src/: App.tsx  index.css  index.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: app.rs  export.rs  fs.rs  fs_runtime.rs  git.rs  markdown.rs  mod.rs  terminal.rs
src-tauri/src/services/: di.rs  document_store.rs  events.rs  export.rs  fs_buffer.rs  git.rs  markdown_assets.rs  markdown_graph.rs  markdown_index.rs  mod.rs  path_resolver.rs  search.rs  terminal.rs  workspace.rs
src-tauri/src/services/document_store/: cache.rs  entry.rs  flush.rs  tests.rs
src-tauri/src/services/markdown_index/: diagnostics.rs  normalize.rs  parser.rs  tests.rs  types.rs
src-tauri/src/services/workspace/: files.rs  fs.rs  index.rs  model.rs
src/app/: AppLayout.tsx  queryClient.ts  useAppLayoutState.ts  useEditorBuffer.test.tsx  useEditorBuffer.ts  useEditorRoutes.ts  useGraphData.ts  useKeyboardShortcuts.ts  useProjectLoader.ts  useRouteTabSync.ts  useTauriReadySignal.ts  useWorkspaceIndex.ts  useWorkspaceMarkdownContents.ts  useWorkspaceTabActions.ts
src/components/: AppCommandDialog.tsx  AppLogo.tsx  AppMenuBar.tsx  AppStatusBar.tsx  ExportStatusOverlay.tsx  FullTextSearchPanel.tsx  GitDiffView.tsx  GraphNodes.tsx  MarkdownBlockSurface.test.tsx  MarkdownBlockSurface.tsx  MarkdownEditor.tsx  MarkdownSourceEditor.test.tsx  MarkdownSourceEditor.tsx  RightSidebar.test.tsx  RightSidebar.tsx  RightSidebarCollapsedRail.tsx  RightSidebarContent.tsx  RightSidebarPrimitives.tsx  RightSidebarProblemsPanel.tsx  RightSidebarSummary.tsx  ScmPanel.tsx  SearchResultPreview.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarActivityRail.tsx  SidebarExplorerPanel.tsx  SidebarFileTree.tsx  SidebarProjectsPanel.tsx  SidebarSearchPanel.tsx  SidebarToolPanel.tsx  SidebarWorkspaceGraphPanel.tsx  TabsBar.test.tsx  TabsBar.tsx  TerminalPanel.tsx  Titlebar.test.tsx  Titlebar.tsx  TitlebarCommandDialog.tsx  TitlebarThemeMenu.tsx  WindowControls.tsx  nav-favorites.tsx  (+7 more)
src/hooks/: use-mobile.tsx  useDarkMode.ts  useToast.ts
src/i18n/: resources.ts  setup.ts  useI18n.ts  utils.ts
src/logic/: fileDragPayload.ts  fileTree.ts  gitStatus.ts  graph.test.ts  graph.ts  graphOptimistic.test.ts  graphOptimistic.ts  graphViewState.test.ts  graphViewState.ts  markdownBlockCommits.test.ts  markdownBlockCommits.ts  markdownBlocks.test.ts  markdownBlocks.ts  markdownCompletions.test.ts  paths.ts  (+10 more)
(+114 files in other folders)
