[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
walkdir = "2.5"
notify = "8.2.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
markdown2pdf = "1.0.0"
pulldown-cmark = "0.13.3"
docx-rs = "0.4"
fluxdi = { version = "1.2.2", features = ["thread-safe"] }
gix = { version = "0.73.0", features = ["status"] }
path-clean = "1.0.1"
pathdiff = "0.2.3"
similar = "2.7.0"
percent-encoding = "2.3.2"
notify-debouncer-mini = "0.7.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"
